refactor: SetofSync → OutboundSeller 리네이밍 및 fileflow-stage 설정 반영
- domain: SetofSyncOutbox → OutboundSellerOutbox 전체 리네이밍
- application: setofsync 패키지 → outboundseller 패키지 전환
  - Port, Service, Manager, Facade, DTO 전체 리네이밍
  - RefundPolicy/ShippingPolicy/SellerAddress Outbound Facade 분리
  - SetofSyncClientFallbackConfig → OutboundSellerClientFallbackConfig
- adapter-out/persistence-mysql: setofsync → outboundseller 패키지 전환
  - V96 마이그레이션: 테이블명 rename
- adapter-out/client: Setof Commerce 어댑터 OutboundSeller 포트 구현으로 전환
- adapter-in/scheduler: SetofSyncOutboxScheduler → OutboundSellerOutboxScheduler
- adapter-in/rest-api: MarketAccessChecker, ProductGroupQueryController, SellerAdminApplicationQueryController 수정
- fileflow-stage.yml 설정 반영
- 테스트 코드 전체 동기화